docs/_static/honegumi_style.css
.title-block .row {
    display: inline-flex;
    align-items: center;
    gap: 0.4em;
    margin-bottom: 1em;
}

.title-block .logo {
    height: 2.5em;
    padding-left: 0.1em;
}

.title-block h2 {
    margin-right: 0.2em;
    font-size: 1.7em;
}

input[type="radio"] {
    opacity: 0;
    position: absolute;
    width: 0;
    height: 0;
}

form {
    display: inline-flex;
    flex-direction: column;
}

.row {
    display: inline-flex;
    align-items: stretch; /* Changed from center */
    justify-content: flex-start; /* Changed from center */
    background-color: #f2f2f2;
    border: 0px solid #ccc;
}

.row-option {
    display: inline-flex; /* Changed from inline-block */
    align-items: center;
    justify-content: center;
    border: 1px solid #ccc;
    padding: 5px;
    cursor: pointer;
    background-color: #f2f2f2;
    text-align: center;
    flex: 1; /* Changed from flex-basis */
}

/* Add this new class for three-option rows */
.row-option-triple {
    flex: 0.66; /* This will make each option take up 1/3 of the remaining space */
}

.row-label {
    display: inline-block;
    padding: 5px;
    background-color: #f2f2f2;
    width: 28ch;
    pointer-events: none;
    cursor: default;
    text-align: left;
    border: none;
    border-left: 3px solid #868686;
    flex-basis: 25.0%;

}

input[type="radio"]:checked+label {
    background-color: #b1b1b1;
}

.tooltip-icon {
    display: inline-block;
    position: relative;
    cursor: pointer;
    color: #000;
    cursor: help;
    flex-basis: 3.0%;
    margin: 0px 5px;
    text-align: center;
}

.tooltip-text {
    position: absolute;
    display: none;
    margin-left: 40px;
    padding: 10px ;
    width: 300px;
    top: -3%;
    text-align: left;
    color: #FFF;
    background: #2C2C2C;
  }

.tooltip-text.active {
    display: block;
}

.tooltip-icon:hover .tooltip-text,
.tooltip-text:hover{
    display: block;
}

/* An invisible arrow that prevents hover deactivation*/
.tooltip-text.arrow:before {
    content: "";
    position: absolute;
    left: -20px;
    top: 5px;
    border-top: 10px solid transparent;
    border-right: 20px solid #2C2C2C00;
    border-left: none;
    border-bottom: 10px solid transparent;
}

/* The black arrow the user sees */
.tooltip-text.arrow:after {
    content: "";
    position: absolute;
    left: -7px;
    top: 4px;
    border-top: 8px solid transparent;
    border-right: 8px solid #2C2C2C;
    border-left: none;
    border-bottom: 8px solid transparent;
}

